--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jwt-simple": "^0.5.0",
     "mysql": "^2.11.1"
   },
   "devDependencies": {
