--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.2",
     "documentation": "^4.0.0-beta11",
     "express": "^4.14.0",
+    "is-integer": "^1.0.6",
     "jwt-simple": "^0.5.0",
     "mysql": "^2.11.1"
   },
